crates/nash-solve/tests/snapshots/inference__builtin_pair_rejects_update.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nf : pair int int -> pair int int\nf p = { p | fst = 1 }\n"
info: diagnostic
---
nash::type::not_a_record

  × Expected a record, found `pair int int`.
   ╭─[Main.nash:3:13]
 2 │ f : pair int int -> pair int int
 3 │ f p = { p | fst = 1 }
   ·             ─┬─
   ·              ╰── field `fst` update of `p`
   ╰────
