crates/nash-solve/tests/snapshots/inference__cons_pattern.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (head)\n\nhead fallback list =\n    case list of\n        first :: rest ->\n            first\n\n        [] ->\n            fallback\n"
---
head : forall (a : Storable). a -> list a -> a
