crates/nash-solve/tests/snapshots/inference__const_function.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (always)\n\nalways x y = x\n"
---
always : forall (a : Any) (b : Any). a -> b -> a
