crates/nash-solve/tests/snapshots/inference__core_cast_schemes_preserve_nominal_source_and_target_types.snap
---
source: crates/nash-solve/tests/inference.rs
expression: render_annotations(&annotations)
---
erase : Int -> Data
lift : int -> Int
lower : Int -> int
shallow : Data -> Int
validate : Data -> Int
